name: cabal-cargs
version: 0.1
cabal-version: >=1.9.2
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: daniel.trstenjak@gmail.com
synopsis: A command line program for extracting compiler arguments from a cabal file.
description: A command line program for extracting compiler arguments from a cabal file.
category: Utils
author: Daniel Trstenjak
data-dir: ""
extra-source-files: README.md
 
source-repository head
    type: git
    location: https://github.com/dan-t/cabal-cargs
 
flag default_false_flag
  default: False

flag default_true_flag
  default: True

library
    build-depends: base >=3 && <5, cmdargs >=0.10.5 && <0.11,
                   lens >=4.0.1 && <4.1, directory -any, strict >=0.3.2 && <0.4,
                   transformers >=0.3.0.0 && <0.4, either >=4.1.1 && <4.2,
                   text >=1.1.0.1 && <1.2, system-filepath >=0.4.9 && <0.5,
                   system-fileio >=0.3.12 && <0.4, Cabal >=1.18.0 && <1.19
    exposed-modules: CabalCargs.Args CabalCargs.Field CabalCargs.Fields
                     CabalCargs.Formatting CabalCargs.Format CabalCargs.Spec
                     CabalCargs.Sections CabalCargs.CompilerArgs CabalCargs.Lenses
    exposed: True
    buildable: True
    if flag(default_true_flag)
        cpp-options: -DLIB
    hs-source-dirs: lib
    other-modules: Paths_cabal_cargs
    if !impl(XXX > 20)
        ghc-options: -W
 
executable cabal-cargs
    build-depends: base >=3 && <5, cabal-cargs -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: exe
    ghc-options: -W
    cpp-options: -DEXE

test-suite tests
    build-depends: base >=3 && <5, tasty ==0.7.*,
                   tasty-golden >=2.2.0.2 && <2.3, filepath >=1.3.0.1 && <1.4,
                   cabal-cargs -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    hs-source-dirs: tests
    ghc-options: -W
    if flag(default_false_flag)
        cpp-options: -DTEST
